Fix scrollbar in pagina Francesco per resize immagini

--- a/ImagineSoftwareWebsite/ImagineSoftwareWebsite/wwwroot/css/site.css
+++ b/ImagineSoftwareWebsite/ImagineSoftwareWebsite/wwwroot/css/site.css
@@ -101,8 +101,7 @@ article, .common-section {
 
     .image-paragraph img {
         max-width: 500px;
-        max-height: 400px;
-        height: auto;
+        width: 100%;
     }
 
 /** Contenuto principale */
